// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > images > getImages > 200 > ok 1`] = `
{
  "images": [
    {
      "_id": "test",
    },
  ],
}
`;

exports[`routes > images > getImages > audit > expected call 1`] = `"vespillo"`;

exports[`routes > images > getImages > audit > expected call 2`] = `
[
  {
    "_id": "test",
  },
]
`;
